--- a/presentation/src/main/res/layout/fragment_car_map.xml
+++ b/presentation/src/main/res/layout/fragment_car_map.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="ui.fragment.CarMapFragment">
 
-    <FrameLayout
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/carMapFragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </layout>
